--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bulma": "^0.9.3",
     "bulma-pricingtable": "^0.2.0",
     "bulma-switch": "^2.0.4",
+    "chroma-js": "^2.4.2",
     "express": "^4.17.2",
     "graphql": "^15.8.0",
     "graphql-tag": "^2.12.6",
