--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-inline-import": "^3.0.0",
     "bulma": "^0.9.3",
     "bulma-pricingtable": "^0.2.0",
+    "bulma-quickview": "^2.0.0",
     "bulma-switch": "^2.0.4",
     "chroma-js": "^2.4.2",
     "express": "^4.17.2",
