--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "meteor-node-stubs": "^1.1.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
