--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0",
+    "uuid": "^9.0.0"
   },
   "meteor": {
     "mainModule": {
